# chatty-quest

./: .gitattributes  .gitignore  Cargo.toml  GLOSSARY.md  README.md
assets/datapacks/: README.md
datasets/: README.md
datasets/templates/: README.md
datasets/worldbuilding/: README.md
docs/: ARCHITECTURE.md  ASSET_VIEWER_SPEC.md  DATAPACK_SPEC.md  DECISION_LOG.md  DERIVED_VIEW_SPEC.md  DESIGN_INTENT.md  HANDOFF_LANES.md  HANDOFF_PAYLOAD_SPEC.md  IMPLEMENTATION_ROADMAP.md  INSTANCE_MIGRATION_PLAN.md  KNOWN_NON_GOALS.md  MAP_SYSTEM_SPEC.md  MEDIA_PANEL_SPEC.md  MODDING_GUIDE.md  PROJECT_OVERVIEW.md  RD_ENGINE_PRINCIPLES.md  REDUCER_RESULT_SPEC.md  REFERENCE_MATERIAL_SUMMARY.md  RUNTIME_MODEL_SPEC.md  SCENARIO_SPEC.md  STATE_AND_BUCKETS.md  UI_SHELL_SPEC.md  V0_1_ACCEPTANCE_AUDIT.md  V0_1_ACCEPTANCE_TESTS.md  V0_1_GITHUB_RELEASE_PLAN.md  V0_1_MANUAL_SWEEP.md  V0_1_RELEASE_NOTES.md  V0_2_MILESTONE_PLAN.md
handoff/: README.md
handoff/chatty_art/: README.md
handoff/chatty_cog/: README.md
handoff/chatty_lora/: README.md
models/: README.md
models/adapters/: README.md
models/capsules/: README.md
models/local/: README.md
runtime/: README.md
runtime/cache/: README.md
runtime/config/: README.md
runtime/exports/: README.md
runtime/logs/: README.md
runtime/saves/: README.md
src/: app.rs  main.rs
src/data/: datapacks.rs
src/diagnostics/: mod.rs
src/game/: actions.rs  generation.rs  mod.rs  narrator.rs  queries.rs  reducer.rs  state.rs
src/media/: mod.rs
src/runtime/: mod.rs
src/session/: mod.rs
src/ui/: derived.rs  mod.rs  views.rs
(+16 files in other folders)
