[package]
name = "chatty-quest"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
